# substrate-barcode-scanner

./: Cargo.toml  Makefile  README.md  pallet_barcode_scanner.rs
.github/workflows/: ci.yml
client/consensus/manual-seal/: Cargo.toml
client/consensus/manual-seal/src/: consensus.rs  error.rs  finalize_block.rs  heartbeat_stream.rs  lib.rs  rpc.rs  seal_block.rs
client/consensus/manual-seal/src/consensus/: babe.rs
doc/: rust-setup.md
node/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: chain_spec.rs  command.rs  service.rs
node/executor/: Cargo.toml
node/executor/src/: lib.rs
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  rpc.rs  service.rs
node/src/service/: mock_timestamp_data_provider.rs
pallets/barcode-scanner/: Cargo.toml
pallets/barcode-scanner/rpc/: Cargo.toml
pallets/barcode-scanner/rpc/src/: lib.rs
pallets/barcode-scanner/runtime-api/: Cargo.toml
pallets/barcode-scanner/runtime-api/src/: lib.rs
pallets/barcode-scanner/src/: banchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
