[package]
authors = ['Ayush Kumar Mishra <https://github.com/ayushmishra2005>']
build = 'build.rs'
description = 'This substrate based blockchain provides scanning of 2D barcode of the product which is tied to a Blockchain system.'
edition = '2018'
license = 'Unlicense'
name = 'node-barcode-scanner'
repository = 'https://github.com/ayushmishra2005/substrate-barcode-scanner'
version = '2.0.1'

[[bin]]
name = 'node-barcode-scanner'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
barcode-scanner-runtime = { path = '../runtime', version = '2.0.1' }
barcode-scanner-rpc = { path = '../pallets/barcode-scanner/rpc', version = '2.0.1' }

# Substrate dependencies
frame-benchmarking-cli = { version = "2.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-transaction-payment-rpc = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-basic-authorship = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-cli = { features = ['wasmtime'], version = '0.8.0', git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-client-api = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-executor = { features = ['wasmtime'], version = '0.8.0', git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-rpc = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-rpc-api = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-service = { features = ['wasmtime'], version = '0.8.0', git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-transaction-pool = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-api = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-block-builder = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-blockchain = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-consensus-aura ={git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-core = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-finality-grandpa = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-inherents = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-runtime = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-transaction-pool = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
substrate-frame-rpc-system = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }

[features]
default = []
runtime-benchmarks = ['barcode-scanner-runtime/runtime-benchmarks']
