[package]
name = "node-template"
version = "2.0.0"
authors = ['Ayush Kumar Mishra <https://github.com/ayushmishra2005>']
description = 'This substrate based blockchain provides scanning of 2D barcode of the product which is tied to a Blockchain system.'
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
structopt = "0.3.8"

sp-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-inherents = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-api = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-blockchain = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-block-builder= {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}

sc-client-api = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus = {version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus-aura = {version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-finality-grandpa = {version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-rpc-api = {version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-basic-authorship = {version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-service = { version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', branch = "master", features = ["wasmtime"] }
sc-telemetry = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-keystore = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-indices = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-contracts = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
frame-system = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-transaction-payment ={git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-transaction-payment-rpc ={git = 'https://github.com/paritytech/substrate.git', branch = "master"}
frame-support = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
pallet-im-online = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
pallet-authority-discovery = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-staking = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
substrate-frame-rpc-system = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
# node-specific dependencies
barcode-scanner-runtime = { version = "2.0.1", path = "../runtime" }
barcode-scanner-rpc = { path = '../pallets/barcode-scanner/rpc', version = '2.0.1' }

sc-cli = { version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', branch = "master", features = ["wasmtime"] }
sc-executor = { version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', branch = "master", features = ["wasmtime"] }
frame-benchmarking = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-benchmarking-cli = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
jsonrpc-core = "15.1.0"
[build-dependencies]
substrate-build-script-utils = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }

[features]
default = []

runtime-benchmarks = [
    "barcode-scanner-runtime/runtime-benchmarks",
]