[package]
name = "node-template"
version = "3.0.0"
authors = ['Ayush Kumar Mishra <https://github.com/ayushmishra2005>']
description = 'This substrate based blockchain provides scanning of 2D barcode of the product which is tied to a Blockchain system.'
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
structopt = "0.3.8"
sp-timestamp = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-consensus-aura = { version = "0.9.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-core = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-runtime = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-inherents = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-api = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-blockchain = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-block-builder= { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-consensus = { version = "0.9.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-transaction-pool = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-consensus-manual-seal = { path = "../client/consensus/manual-seal", version = "0.9.0" }

sc-client-api = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-consensus = { version = "0.9.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-transaction-pool = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-consensus-aura = { version = "0.9.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-finality-grandpa = { version = "0.9.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-finality-grandpa = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-rpc-api = { version = "0.9.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-rpc = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-basic-authorship = { version = "0.9.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-service = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1',  features = ["wasmtime"] }
sc-telemetry = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-keystore = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
pallet-indices = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
pallet-timestamp = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
pallet-contracts = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
frame-system = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
pallet-balances = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
pallet-transaction-payment ={ version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
pallet-transaction-payment-rpc ={ version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
pallet-authority-discovery = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
pallet-staking = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
substrate-frame-rpc-system = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
# node-specific dependencies
barcode-scanner-runtime = { version = "2.0.1", path = "../runtime" }
barcode-scanner-rpc = { path = '../pallets/barcode-scanner/rpc', version = '2.0.1' }

sc-cli = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1',  features = ["wasmtime"] }
sc-executor = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1',  features = ["wasmtime"] }
frame-benchmarking = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-benchmarking-cli = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
jsonrpc-core = "15.1.0"
[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}

[features]
default = []

runtime-benchmarks = [
    "barcode-scanner-runtime/runtime-benchmarks",
]