[package]
authors = ['Ayush Kumar Mishra <https://github.com/ayushmishra2005>']
edition = '2018'
description = 'Substrate based 2D barcode scanner pallet'
license = 'Unlicense'
name = 'barcode-scanner-runtime'
repository = 'https://github.com/ayushmishra2005/substrate-barcode-scanner'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = '1.1.0'

# local dependencies
pallet-barcode-scanner = { path = '../pallets/barcode-scanner', default-features = false, version = '2.0.1' }
barcode-scanner-runtime-api = { path = '../pallets/barcode-scanner/runtime-api', default-features = false, version = '2.0.1' }

# primitives
sp-block-builder = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-inherents = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-offchain = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-core = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-std = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-api = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-runtime = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-session = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-transaction-pool = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-version = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}

# Substrate dependencies
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-executive = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-support = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-system = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-aura = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-balances = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-grandpa = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-sudo = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-timestamp = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-transaction-payment = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-consensus-aura = { version = "0.9.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
pallet-collective  = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', branch = 'rococo-v1', default-features = false }
pallet-democracy  = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', branch = 'rococo-v1', default-features = false }
pallet-elections-phragmen = { git = 'https://github.com/paritytech/substrate.git', version = '4.0.0', branch = 'rococo-v1', default-features = false }
pallet-membership = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', branch = 'rococo-v1', default-features = false }
pallet-treasury  = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', branch = 'rococo-v1', default-features = false }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', branch = 'rococo-v1', default-features = false }


[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'pallet-barcode-scanner/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-barcode-scanner/std',
    'barcode-scanner-runtime-api/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-treasury/std',
    'pallet-collective/std',
    'pallet-elections-phragmen/std',
    'pallet-membership/std',
    'pallet-democracy/std',
    'pallet-scheduler/std',

]
