[package]
authors = ['Ayush Kumar Mishra <https://github.com/ayushmishra2005>']
description = 'FRAME pallet for defining barcode scanner logic.'
edition = '2018'
license = 'Unlicense'
name = 'pallet-barcode-scanner'
repository = 'https://github.com/ayushmishra2005/substrate-barcode-scanner'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true }
frame-support = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-system = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-runtime = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-std = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
sp-io = {  version = '3.0.0',default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}

[dev-dependencies]
sp-core = { version = "3.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "sp-std/std",
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
]

runtime-benchmarks = ["frame-benchmarking"]