[package]
authors = ['Ayush Kumar Mishra <https://github.com/ayushmishra2005>']
description = 'FRAME pallet for defining barcode scanner logic.'
edition = '2018'
license = 'Unlicense'
name = 'pallet-barcode-scanner'
repository = 'https://github.com/ayushmishra2005/substrate-barcode-scanner'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
serde = { version = "1.0.136", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-std = { version = "4.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.27'}

[dev-dependencies]
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "sp-std/std",
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
    "scale-info/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]