[package]
authors = ['Ayush Mishra <ayushmishra2005@gmail.com>']
description = 'RPC interface for Substrate based 2D barcode scanner pallet'
edition = '2018'
license = "Apache-2.0"
name = "barcode-scanner-rpc"
repository = 'https://github.com/ayushmishra2005/substrate-barcode-scanner'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
barcode-scanner-runtime-api = { path = '../runtime-api', default-features = false, version = '2.0.1' }
sp-rpc ={ default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.27'}
sp-runtime ={ default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.27'}
sp-api ={ default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.27'}
sp-blockchain ={ default-features = false , git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.27'}

