[package]
authors = ['Ayush Mishra <ayushmishra2005@gmail.com>']
description = 'Runtime API for Substrate based 2D barcode scanner pallet'
edition = '2018'
license = "Apache-2.0"
name = "barcode-scanner-runtime-api"
repository = 'https://github.com/ayushmishra2005/substrate-barcode-scanner'
version = '2.0.1'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
sp-api = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }

[features]
default = ["std"]
std = [
    'codec/std',
    "sp-api/std",
]